test: ajustes finais nos testes de EmprestimoService e Controllers